--- a/termin/past.html
+++ b/termin/past.html
@@ -69,6 +69,152 @@
                 <button class="scroll-to-top" onclick="scrollToTop()">Up</button>
                 <ul class="past_list">
                     <li>
+                        <p class="uhr">Samstag</p>
+                        <p class="datum">28.09.2024</p>
+                        <p class="concert">"Werner Richter"- Wettbewerb</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Städtische+Musikschule+Chemnitz/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47a7465abf2118eb:0xaf01ce85677bdde2?sa=X&ved=1t:3061&ictx=111"
+                            target="_blank">Städtische Musikschule</a> , Chemnitz
+                        </p>
+                        <p class="concert-info">Jury des Sächsischen "Werner Richter"-Wettbewerbs für Akkordeon und Bandoneon</p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Werner%20Richter%20Wettbewerb&details=Jury%20des%20Sächsischen%20Werner%20Richter%20Wettbewerbs%20für%20Akkordeon%20und%20Bandoneon&location=Städtische%20Musikschule,%20Chemnitz&dates=20240928T090000Z/20240928T170000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Werner%20Richter%20Wettbewerb%0D%0ADESCRIPTION:Jury%20des%20Sächsischen%20Werner%20Richter%20Wettbewerbs%20für%20Akkordeon%20und%20Bandoneon%0D%0ADTSTART:20240928T090000Z%0D%0ADTEND:20240928T170000Z%0D%0ALOCATION:Städtische%20Musikschule,%20Chemnitz%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://www.musikschule-chemnitz.de/projekte-wettbewerbe/werner-richter-wettbewerb">mehr infos | anmeldung</a>
+                    </li>
+                    <li>
+                        <p class="uhr">Sonntag, 19:30 Uhr</p>
+                        <p class="datum">22.09.2024</p>
+                        <p class="concert">"DUO KLAKK! | ALTE X NEUE"</p>
+                        <p class="location">
+                            <i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir/50.316338,11.910899/Kurstraße+5,+83435+Bad+Reichenhall/@47.7898759,12.7612248,11z/data=!4m9!4m8!1m1!4e1!1m5!1m1!1s0x47768c69c24f5349:0xff62a46b8ad1748a!2m2!1d12.88022!2d47.72658?entry=ttu" target="_blank">
+                                Kurstraße 5, 83435 Bad Reichenhall
+                            </a>
+                        </p>
+                        <p class="concert-info">
+                            <a target="_blank" href="https://www.instagram.com/reel/C_rHlWaqfaa/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">DUO KlAkk!</a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link" 
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=DUO%20KLAKK!%20|%20ALTE%20X%20NEUE&details=DUO%20KLAKK!%20|%20ALTE%20X%20NEUE&location=Kurstraße%205,%2083435%20Bad%20Reichenhall&dates=20240922T173000Z/20240922T193000Z" 
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link" 
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:DUO%20KLAKK!%20|%20ALTE%20X%20NEUE%0D%0ADESCRIPTION:DUO%20KLAKK!%20|%20ALTE%20X%20NEUE%0D%0ADTSTART:20240922T173000Z%0D%0ADTEND:20240922T193000Z%0D%0ALOCATION:Kurstraße%205,%2083435%20Bad%20Reichenhall%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR" 
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="">mehr infos</a>
+                    </li>
+                    <li>
+                        <p class="uhr">Sonntag, 17:00 Uhr</p>
+                        <p class="datum">15.09.2024</p>
+                        <p class="concert"> "Warning to the rich"</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> <a
+                                href="https://www.google.com/maps?client=safari&sca_esv=597840864&rls=en&sxsrf=ACQVn08PefMNrTffwf2jL2FqHYd2OpDzhg:1705079852321&uact=5&gs_lp=Egxnd3Mtd2l6LXNlcnAiD0tyZXV6a2lyY2hlIGhvZjIIEAAYgAQYywEyBhAAGBYYHjIGEAAYFhgeMgYQABgWGB4yBhAAGBYYHjIGEAAYFhgeMgYQABgWGB4yBhAAGBYYHjIGEAAYFhgeSKUNUNQCWJIMcAJ4AZABAJgBpAGgAf0EqgEDMC41uAEDyAEA-AEBwgIKEAAYRxjWBBiwA8ICCxAuGIAEGMcBGK8BwgIOEC4YgAQYxwEYrwEYjgXCAgUQABiABMICGhAuGIAEGMcBGK8BGJcFGNwEGN4EGOAE2AEB4gMEGAAgQYgGAZAGB7oGBggBEAEYFA&um=1&ie=UTF-8&fb=1&gl=de&sa=X&geocode=KZm9XbWyEaFHMbNLagn9ZM27&daddr=Jahnstraße+67,+95030+Hof"
+                                target="_blank">Kreuzkirche</a>, Hof</p>
+                        <p class="concert-info"><a target="_blank" href="https://kammerchor-hof.de/konzerte/">Kammerchor
+                                Hof</a></p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Warning%20to%20the%20rich&details=Kammerchor%20Hof&location=Kreuzkirche,%20Hof&dates=20240915T150000Z/20240915T170000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Warning%20to%20the%20rich%20(at%20Kreuzkirche,%20Hof)%0D%0ADESCRIPTION:Kammerchor%20Hof%0D%0ADTSTART:20240915T150000Z%0D%0ADTEND:20240915T170000Z%0D%0ALOCATION:Kreuzkirche,%20Hof%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://kammerchor-hof.de/konzerte/">mehr infos |
+                            ticket</a>
+                    </li>
+                    <li>
+                        <p class="uhr">Samstag, 21:00 Uhr</p>
+                        <p class="datum">14.09.2024</p>
+                        <p class="concert">Die Hallersteiner Nachtkonzerte</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> <a href="https://www.google.com/maps?ll=50.184221,11.922303&z=16&t=m&hl=en-GB&gl=US&mapclient=embed&q=Hallerstein+95126+Schwarzenbach+an+der+Saale">Evangelischen Kirchengemeinde</a>, Hallerstein</p>
+                        <p class="concert-info">Kammermusikalischer Jazz-Abend</p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Die%20Hallersteiner%20Nachtkonzerte&details=Kammermusikalischer%20Jazz-Abend&location=Evangelischen%20Kirchengemeinde%20Hallerstein,%20Hallerstein&dates=20240914T190000Z/20240914T210000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Die%20Hallersteiner%20Nachtkonzerte%0D%0ADESCRIPTION:Kammermusikalischer%20Jazz-Abend%0D%0ADTSTART:20240914T190000Z%0D%0ADTEND:20240914T210000Z%0D%0ALOCATION:Evangelischen%20Kirchengemeinde%20Hallerstein,%20Hallerstein%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://www.hallerstein.de/vereine/heimat-und-kulturverein/nachtkonzerte/">mehr infos | ticket</a>
+                    </li>   
+                    <li>
+                        <p class="uhr">Samstag, 18:00 Uhr</p>
+                        <p class="datum">14.09.2024</p>
+                        <p class="concert"> "Warning to the rich"</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> <a
+                                href="https://www.google.com/maps/dir//Auferstehungskirche/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47a11a6bfc6f2369:0xdb01cc124022d4a0?sa=X&ved=2ahUKEwiPm9rgrdiDAxVIR_EDHV8NCFAQ9Rd6BAhAEAA"
+                                target="_blank">Auferstehungskirche</a>, Bamberg </p>
+                        <p class="concert-info"><a target="_blank" href="https://kammerchor-hof.de">Kammerchor Hof</a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Warning%20to%20the%20rich&details=Kammerchor%20Hof&location=Auferstehungskirche,%20Bamberg&dates=20240914T160000Z/20240914T180000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Warning%20to%20the%20rich%20(at%20Auferstehungskirche,%20Bamberg)%0D%0ADESCRIPTION:Kammerchor%20Hof%0D%0ADTSTART:20240914T160000Z%0D%0ADTEND:20240914T180000Z%0D%0ALOCATION:Auferstehungskirche,%20Bamberg%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://kammerchor-hof.de">mehr infos | ticket</a>
+                    </li>   
+                    <li>
+                        <p class="uhr">Freitag, 20:00 Uhr</p>
+                        <p class="datum">13.09.2024</p>
+                        <p class="concert">Cello x Accordion</p>
+                        <p class="location">
+                            <i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Kreuzkirche%2C%20Spitalgasse%2C%20Ochsenfurt%2C%20Germany" target="_blank">
+                                Kreuzkirche, Spitalgasse
+                            </a>, Ochsenfurt
+                        </p>
+                        <p class="concert-info">
+                            cellist<a target="_blank" href="https://www.ivanturkalj.com">: Ivan Turkalj</a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link" href="https://www.google.com/calendar/render?action=TEMPLATE&text=Cello%20x%20Accordion&details=Cellist%3A%20Ivan%20Turkalj&location=Kreuzkirche%2C%20Spitalgasse%2C%20Ochsenfurt%2C%20Germany&dates=20240913T180000Z/20240913T200000Z" target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link" href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Cello%20x%20Accordion%20(at%20Kreuzkirche%2C%20Spitalgasse%2C%20Ochsenfurt%2C%20Germany)%0D%0ADESCRIPTION:Cellist%3A%20Ivan%20Turkalj%0D%0ADTSTART:20240913T180000Z%0D%0ADTEND:20240913T200000Z%0D%0ALOCATION:Kreuzkirche%2C%20Spitalgasse%2C%20Ochsenfurt%2C%20Germany%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR" download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://kammerchor-hof.de">mehr infos</a>
+                    </li>              
+                    <li>
                         <p class="uhr">Sonntag, 17:00 Uhr</p>
                         <p class="datum">16.06.2024</p>
                         <p class="concert">projects4cellos & friends</p>
