--- a/termin/past.html
+++ b/termin/past.html
@@ -69,6 +69,85 @@
                 <button class="scroll-to-top" onclick="scrollToTop()">Up</button>
                 <ul class="past_list">
                     <li>
+                        <p class="uhr">Freitag, 20:00 Uhr</p>
+                        <p class="datum">18.10.2024</p>
+                        <p class="concert"> Duo KlAkk! | alte x neue</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Stadtkirche+Bayreuth/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47a27d94b1924f0b:0xdaf9b271015ca5e1?sa=X&ved=2ahUKEwj79JG1ltX2AhWZhf0HHczNCEsQ9Rd6BAh7EAQ" target="_blank">
+                                Kirchpl. 1, 95444 Bayreuth
+                            </a>
+                        </p>
+                        <p class="concert-info">
+                            <a target="_blank" href="https://haraldoeler.com/projekte/duoklakk">DUO KlAkk!</a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Duo%20KlAkk!%20|%20alte%20x%20neue&details=Duo%20KlAkk!%20|%20alte%20x%20neue&location=Kirchpl.%201,%2095444%20Bayreuth&dates=20241018T180000Z/20241018T200000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Duo%20KlAkk!%20|%20alte%20x%20neue%0D%0ADESCRIPTION:Duo%20KlAkk!%20|%20alte%20x%20neue%0D%0ADTSTART:20241018T180000Z%0D%0ADTEND:20241018T200000Z%0D%0ALOCATION:Kirchpl.%201,%2095444%20Bayreuth%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/projekte/duoklakk">mehr infos | ticket</a>
+                    </li>
+                    <li>
+                        <p class="uhr">Freitag, 19:00 Uhr</p>
+                        <p class="datum">11.10.2024</p>
+                        <p class="concert"> Duo KlAkk! | alte x neue</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//vhs+hoferland/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x47a11a06b20e5bbd:0x2f0d36d03997dfa2?sa=X&ved=1t:3061&ictx=111" target="_blank">
+                                Ludwigstraße 7, 95028 Hof
+                            </a>
+                        </p>
+                        <p class="concert-info">
+                            <a target="_blank" href="https://haraldoeler.com/projekte/duoklakk">Duo KlAkk!</a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Duo%20KlAkk!%20|%20alte%20x%20neue&details=Duo%20KlAkk!%20|%20alte%20x%20neue&location=Ludwigstraße%207,%2095028%20Hof&dates=20241011T170000Z/20241011T190000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Duo%20KlAkk!%20|%20alte%20x%20neue%0D%0ADESCRIPTION:Duo%20KlAkk!%20|%20alte%20x%20neue%0D%0ADTSTART:20241011T170000Z%0D%0ADTEND:20241011T190000Z%0D%0ALOCATION:Ludwigstraße%207,%2095028%20Hof%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/projekte/duoklakk">mehr infos | ticket</a>
+                    </li>
+                    <li>
+                        <p class="uhr">Donnerstag, 19:30 Uhr</p>
+                        <p class="datum">10.10.2024</p>
+                        <p class="concert"> Jazz im Schlösschen </p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> <a
+                                href="https://www.google.com/maps?q=Helmut-Sch%C3%B6ler-Saal+im+Schl%C3%B6sschen"
+                                target="_blank">Helmut-Schöler-Saal im Schlösschen</a></p>
+                        <p class="concert-info"><a href="https://haraldoeler.com/projekte/triofussissimo">Trio
+                                Fussissimo</a></p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Jazz%20im%20Schl%C3%B6sschen&details=Trio%20Fussissimo&location=Helmut-Sch%C3%B6ler-Saal%20im%20Schl%C3%B6sschen&dates=20241010T173000Z/20241010T213000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Jazz%20im%20Schl%C3%B6sschen%20(Trio%20Fussissimo)%0D%0ADESCRIPTION:Trio%20Fussissimo%0D%0ADTSTART:20241010T173000Z%0D%0ADTEND:20241010T213000Z%0D%0ALOCATION:Helmut-Sch%C3%B6ler-Saal%20im%20Schl%C3%B6sschen%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="http://www.kulturkreis-wertheim.de">mehr infos |
+                            ticket</a>
+                    </li>
+                    <li>
                         <p class="uhr">Samstag</p>
                         <p class="datum">28.09.2024</p>
                         <p class="concert">"Werner Richter"- Wettbewerb</p>
