--- a/termine.html
+++ b/termine.html
@@ -159,10 +159,35 @@
                                 iCAL
                             </a>
                         </div>
-                    </li>
-                    
                         <a target="_blank" class="mehrinfo" href="https://www.ivanturkalj.com">mehr infos</a>
                     </li>
+                    <li>
+                        <p class="uhr">Samstag, 16:00 Uhr</p>
+                        <p class="datum">25.01.2025</p>
+                        <p class="concert">Tango : Nuevo!</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Schloss+Britz+Berlin" target="_blank">
+                                Schloss Britz, Berlin
+                            </a>
+                        </p>
+                        <p class="concert-info">
+                            <p>komponiert und gespielt von Harald Oeler</p>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Tango%3ANuevo!%20-%20Harald%20Oeler&details=Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!&location=Schloss%20Britz,%20Berlin&dates=20250125T150000Z/20250125T170000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Tango%3ANuevo!%20-%20Harald%20Oeler%0D%0ADESCRIPTION:Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!%0D%0ADTSTART:20250125T150000Z%0D%0ADTEND:20250125T170000Z%0D%0ALOCATION:Schloss%20Britz,%20Berlin%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://schloss-gutshof-britz.de/schloss-britz">mehr infos</a>
+                    </li>                    
                     <li>
                         <p class="uhr">Sonntag,tba</p>
                         <p class="datum">16.02.2025</p>
