--- a/projekte/duoklakk.html
+++ b/projekte/duoklakk.html
@@ -72,42 +72,54 @@
                 <br>Im Mittelpunkt des Konzertprogramms steht das Werk „Double dubbing“, welches den Einsatz eines eigens erstellten Setups aus Piezzos und LEDs erfordert. Hier werden mittels elektrischer Impulse der Piezzo-Tonabnehmer, LEDs zum leuchten angeregt. Es entsteht ein lebhaftes Meer an kleinen Lichtblitzen, welche die Musik sichtbar werden lässt. 
                 <br>
                 <br>Zukünftig sieht sich KlAkk! Als Klangmedium der elektroakustischen Neuen Musik mit dem Ziel der Vermehrung originaler Literatur für Klarinette und Akkordeon im Kontext elektronischer Klangmedien.</p> 
-            </div>
-            <div class="col-right">
-                <h2>Programm</h2>
-                <ul class="programm">
-                    <li>
-                        <span class="bold">Joseph Haydn (1732 - 1809)</span> 
-                        <br>Divertimento in G Dur, nr 2, op. 100, für Klarinette in B und Akkordeon (Arr.Harald Oeler) 
-                        <p>1. Allegro</p>
-                        <p>2. Adagio</p>
-                        <p>3. Allegro</p>
-                    </li>
-                    <li>
-                        <span class="bold"><a href="https://www.sinafanisani.com/home">Sina Fani Sani</a> (1990) </span>
-                        <br>A Strange Loop II: Drink your tea, the kids are dead!.., 
-                        <br>for accordion and clarinet in Bb
-                    </li>
-                    <li>
-                        <span class="bold"><a href="">Johann Sebastian Bach</a> (1685 - 1750)</span>
-                        <br>Sonate g-Moll für Viola da gamba und Cembalo, BWV 1029 (Arr.Harald Oeler)
-                        <p>1. Vivace</p>
-                        <p>2. Adagio</p>
-                        <p>3. Allegro</p>
-                    </li>
-                    <li>
-                        <span class="bold"><a href="http://johansvensson.nu">Johan Svensson</a> (1983)</span>
-                        <br>Double Dubbing (firefly song) (2020) for clarinet, accordeon & 16 piezo-buzzers
-                    </li>
-                </ul>
+                <br>
                 <h2>Konzerte</h2>
                 <ul class="programm">
                     <li>
                         <p><span class="bold">22.09.2024 19:30 Uhr </span>Kurstraße 5, 83435 Bad Reichenhall</p>
                         <p><span class="bold">11.10.2024 19:00 Uhr </span>Ludwigstraße 7, 95028 Hof</p>
                         <p><span class="bold">18.10.2024 20:00 Uhr </span>Kirchpl. 1, 95444 Bayreuth</p>
+                        <p><span class="bold">01.03.2025 20:00 Uhr </span>Zeller Str. 1, 97082 Würzburg</p>
+
                     </li>
                 </ul>
+            </div>
+            <div class="col-right">
+                <iframe loading="lazy" class="youtube no-border" src="https://www.youtube.com/embed/kw7_NO-klxM?si=WMlvblSPOAOChYwY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <br>
+                <h2>Repertoire</h2>
+                <ul class="programm">
+                    <li>
+                        <span class="bold"><a href="https://youtu.be/9WGPikQQlyw?si=nqVBtYPyOMaeLEQ9">Joseph Haydn (1732 - 1809)</a></span> 
+                        <br>Divertimento in G Dur, nr 2, op. 100, für Klarinette in B und Akkordeon (Arr.Harald Oeler) 
+                        <p>1. Allegro</p>
+                        <p>2. Adagio</p>
+                        <p>3. Allegro</p>
+                    </li>
+                    <li>
+                        <span class="bold">Harald Oeler (*1977)</span> 
+                        <br>Remembering Paris
+                        <p>version für B Klarinette und Akkordeon</p>
+                        
+                    </li>
+                    <li>
+                        <span class="bold">Sina Fani Sani (*1990) </span>
+                        <br>A Strange Loop II: Drink your tea, the kids are dead!.., 
+                        <br>for accordion and clarinet in Bb
+                    </li>
+                    <li>
+                        <span class="bold"><a href="https://youtu.be/xwVu6_XbiV0?si=a0QYWLfIaycuHgw1">Johann Sebastian Bach</a> (1685 - 1750)</span>
+                        <br>Sonate g-Moll für Viola da gamba und Cembalo, BWV 1029 (Arr.Harald Oeler)
+                        <p>1. Vivace</p>
+                        <p>2. Adagio</p>
+                        <p>3. Allegro</p>
+                    </li>
+                    <li>
+                        <span class="bold">Johan Svensson (*1983)</span>
+                        <br>Double Dubbing (firefly song) (2020) for clarinet, accordeon & 16 piezo-buzzers
+                    </li>
+                </ul>
+                
             </div>
         </div>
     </section>
