--- a/projekte/duoklakk.html
+++ b/projekte/duoklakk.html
@@ -85,7 +85,8 @@
                 </ul>
             </div>
             <div class="col-right">
-                <iframe loading="lazy" class="youtube no-border" src="https://www.youtube.com/embed/kw7_NO-klxM?si=WMlvblSPOAOChYwY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                
+                <iframe loading="lazy" class="youtube no-border" src="https://www.youtube.com/embed/X1X9cu2THKQ?si=FLqFh8Kr-SfC7c5x" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <br>
                 <h2>Repertoire</h2>
                 <ul class="programm">
