--- a/termin/past.html
+++ b/termin/past.html
@@ -69,6 +69,60 @@
                 <button class="scroll-to-top" onclick="scrollToTop()">Up</button>
                 <ul class="past_list">
                     <li>
+                        <p class="uhr">Samstag, 18:00 Uhr</p>
+                        <p class="datum">30.11.2024</p>
+                        <p class="concert">Tango : Nuevo!</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Evangelische+Kirche+Gemmrigheim" target="_blank">
+                                Evangelische Kirche, Gemmrigheim
+                            </a>
+                        </p>
+                        <p class="concert-info">
+                            <a target="_blank" href="termin/„TANGO  NUEVO!”.pdf.pdf">komponiert und gespielt von Harald Oeler</a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Tango%3ANuevo!%20-%20Harald%20Oeler&details=Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!&location=Evangelische%20Kirche,%20Gemmrigheim&dates=20241130T170000Z/20241130T190000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Tango%3ANuevo!%20-%20Harald%20Oeler%0D%0ADESCRIPTION:Komponiert%20und%20gespielt%20von%20Harald%20Oeler%20-%20Tango%3ANuevo!%0D%0ADTSTART:20241130T170000Z%0D%0ADTEND:20241130T190000Z%0D%0ALOCATION:Evangelische%20Kirche,%20Gemmrigheim%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="termin/„TANGO  NUEVO!”.pdf.pdf">mehr infos</a>
+                    </li>
+                    <li>
+                        <p class="uhr">Sonntag, 19:30 Uhr</p>
+                        <p class="datum">10.11.2024</p>
+                        <p class="concert">Hofer Symponiker - Abschlusskonzert mit projects4cellos</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//KlangManufaktur+Kulmbacher+Straße+1+95030+Hof" target="_blank">
+                                Kulmbacher Straße 1, 95030 Hof
+                            </a>
+                        </p>
+                        <p class="concert-info">
+                            <a target="_blank" href="https://www.projects4cellos.de">music4cellos - Abschlusskonzert</a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=music4cellos%20Abschlusskonzert&details=music4cellos%20Abschlusskonzert%20mit%20projects4cellos&location=Kulmbacher%20Straße%201,%2095030%20Hof&dates=20241110T183000Z/20241110T203000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:music4cellos%20Abschlusskonzert%0D%0ADESCRIPTION:music4cellos%20Abschlusskonzert%20mit%20projects4cellos%0D%0ADTSTART:20241110T183000Z%0D%0ADTEND:20241110T203000Z%0D%0ALOCATION:Kulmbacher%20Straße%201,%2095030%20Hof%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="event.ics">
+                                iCAL
+                            </a>
+                        </div>
+                        <a target="_blank" class="mehrinfo" href="https://www.hofer-symphoniker.de">mehr infos | ticket</a>
+                    </li>
+                    <li>
                         <p class="uhr">Freitag, 20:00 Uhr</p>
                         <p class="datum">18.10.2024</p>
                         <p class="concert"> Duo KlAkk! | alte x neue</p>
