--- a/termine.html
+++ b/termine.html
@@ -166,7 +166,7 @@
                         <a target="_blank" class="mehrinfo" href="">mehr infos</a>
                     </li>
                     <li>
-                        <p class="uhr">Samstag, 20:00 Uhr</p>
+                        <p class="uhr">Samstag, 19:30 Uhr</p>
                         <p class="datum">01.03.2025</p>
                         <p class="concert">DUO KlAkk! | alte x neue</p>
                         <p class="location"><i class="fa-solid fa-location-dot"></i> 
@@ -185,11 +185,11 @@
                                 GOOGLE CALENDAR
                             </a> |
                             <a class="calendar-link"
-                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:DUO%20KlAkk!%20|%20alte%20x%20neue%0D%0ADESCRIPTION:DUO%20KlAkk!%20|%20alte%20x%20neue%0D%0ADTSTART:20250301T190000Z%0D%0ADTEND:20250301T210000Z%0D%0ALOCATION:Spit%C3%A4le,%20Zeller%20Str.%201,%2097082%20W%C3%BCrzburg%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
-                                download="event.ics">
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:DUO%20KlAkk!%20|%20alte%20x%20neue%0D%0ADESCRIPTION:DUO%20KlAkk!%20|%20alte%20x%20neue%0D%0ADTSTART:20250301T183000Z%0D%0ADTEND:20250301T203000Z%0D%0ALOCATION:Spit%C3%A4le,%20Zeller%20Str.%201,%2097082%20W%C3%BCrzburg%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="DUO_KlAkk_event.ics">
                                 iCAL
                             </a>
-                        </div>
+                        </div>                        
                         <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/projekte/duoklakk">mehr infos | ticket</a>
                     </li>
 
