--- a/projekte/solo.html
+++ b/projekte/solo.html
@@ -75,14 +75,17 @@
                     <br>Harald Oeler wirkte bei verschiedenen Projekten und Festivals mit, darunter der "<a target="_blank" href="https://www.heidelberger-fruehling.de">Heidelberger Frühling</a>", das "<a target="_blank" href="https://www.vgh-stiftung.de/Projekt/literaturfest-niedersachsen/">Literaturfest Niedersachsen</a>"", die <a target="_blank" href="https://www.musiktage-hitzacker.de/home">"Sommerliche Musiktage Hitzacker</a>" der Frankfurter "<a href="https://www.museumskonzerte.de/konzerte/museumssalon-konzerte-in-privaten-raeumen/" target="_blank">MuseumsSalon</a>" und Jazzfestivals wie das "<a target="_blank" href="https://www.br-klassik.de/themen/jazz-und-weltmusik/django-reinhardt-memorial-augsburg-100">Django Memorial Augsburg</a>"" und das "<a target="_blank" href="https://www.hr2.de/veranstaltungen/jazzfestival/djf23_veranst_uebersicht_54-jazzfestival-frankfurt-100">Frankfurter Jazzfestival</a>"". 
                     <br>
                     <br>Konzertreisen führten Harald Oeler bereits nach China, Korea, Rumänien, Finnland, Schweden, Italien, Österreich, Schweiz und Polen. Zahlreiche CD Produktionen bei <a target="_blank" href="https://www.oehmsclassics.de">OehmsClassics</a>, <a target="_blank" href="https://www.genuin.de/de/0403.php">Genuin</a> und Thorofon/<a target="_blank" href="https://www.bella-musica.de">Bella Musica</a> repräsentieren sein breitgefächertes Konzertleben.</p>
+                    <br>
+            
+                   
                 </div>
                 <div class="col-right">
                     <div class="solo-top">
                         <h2>Solo</h2>
-                        <p>The Revolution of Tango Nuevo</p>
+                        <p>''REMEMBERING''</p>
                         <br>
                     </div>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/tgLi-hNbMO0?si=c9OAZdYEkvL0CHNX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/AH1Bj1WaY8o?si=yPjBHusYXQ3EtKaO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <br>
                     <div class="solo-top">
                         <h2>Pictures at an Exhibition</h2>
