--- a/news.html
+++ b/news.html
@@ -63,6 +63,30 @@
         <h2 class="section-title">NEWS</h2>
         <div class="news">
             <div class="news-column">
+                <a href="news/solo">
+                <img loading="lazy" src="image/remembering.webp" alt="joschostephan" class="news-image"></a>
+                <a href="news/solo"><h2>SOLO | " REMEMBERING "</h2></a>
+                <p class="date">01.JANUAR.2025</p>
+                <p class="bold uppercase">Mein neues, eigenkomponiertes Soloprogramm wird jetzt auf YouTube mit einem kleinen Video vorgestellt</p>
+                <a href="news/joschostephan" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="news-column">
+                <a href="news/">
+                <img loading="lazy" src="image/.webp" alt="" class="news-image"></a>
+                <a href="news/"><h2></h2></a>
+                <p class="date">30.JANUAR.2024</p>
+                <p class="bold uppercase"></p>
+                <a href="news/" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="news-column">
+                <a href="news/">
+                <img loading="lazy" src="image/.webp" alt="" class="news-image"></a>
+                <a href="news/"><h2></h2></a>
+                <p class="date">30.JANUAR.2024</p>
+                <p class="bold uppercase"></p>
+                <a href="news/" class="mehrinfo">mehr infos <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+            <div class="news-column">
                 <a href="news/joschostephan">
                 <img loading="lazy" src="image/joschostephan1.webp" alt="joschostephan" class="news-image"></a>
                 <a href="news/joschostephan"><h2>TOUR | JOSCHO STEPHAN TRIO</h2></a>
